# 7zip

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/sven/zip/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/example/sven/zip/: MainActivity.java  ZipCode.java
app/src/main/java/com/example/sven/zip/utils/: CommandUtils.java  ZipHelper.java
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/sven/zip/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
